# flask-boilerplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUNDING.yml  README.fr.md  README.md  SECURITY.md  SECURITY_HALL_OF_FAME.md  codecov.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  roadmap.md
.github/actions/install-env/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: auto-assign-author.yml  auto-assign-milestone.yml  auto-label-conventional-commits.yaml  build.yml  cd-main.yml  cd-release.yml  cd.yml  ci-feature.yml  ci-hotfixes.yml  ci.yml  codeql-analysis.yml  deploy.yml  gitguardian.yml  links.yml  poetry-setup.yml  quality.yml  security.yml  snyk-security.yml
docs/source/: conf.py  getting_started.rst  index.rst  introduction.rst
src/flask-boilerplate/: __init__.py
src/flask-boilerplate/domain/: __init__.py
src/flask-boilerplate/domain/enums/: __init__.py  example_enum.py
src/flask-boilerplate/domain/primitives/: __init__.py  aggregate_root.py  domain_service.py  entity.py  interface_domain_event.py  repository.py  specification.py  value_object.py
src/flask_boilerplate/: __init__.py
src/flask_boilerplate/domain/: __init__.py
src/flask_boilerplate/domain/entities/: __init__.py  entity_example.py  example_entity.py
src/flask_boilerplate/domain/enums/: __init__.py  enum_example.py  example_enum.py
src/flask_boilerplate/domain/errors/: __init__.py  entities_error.py  value_objects_error.py
src/flask_boilerplate/domain/primitives/: __init__.py  aggregate_root.py  domain_service.py  entity.py  interface_domain_event.py  repository.py  specification.py  value_object.py
src/flask_boilerplate/domain/value_objects/: __init__.py  value_object_example.py
tests/: __init__.py  generic_test.py
tests/unit/: __init__.py
tests/unit/domain/: __init__.py  test_entities.py  test_entities_init.py  test_value_objects.py
