[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flask-boilerplate"
version = "0.1.0"
description = "A Flask boilerplate project"
authors = ["Cedric Grun <cedric.grun@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cedric57/flask-boilerplate"
repository = "https://github.com/cedric57/flask-boilerplate"
documentation = "https://flask-boilerplate.readthedocs.io"
packages = [
    { include = "flask_boilerplate", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
sphinx = "^8.1.3"
jinja2 = "^3.1.5"
sqlalchemy = "^2.0.37"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
mypy = "^1.14.1"
bandit = "^1.8.2"
safety = "^3.2.14"
ruff = "^0.9.4"
pre-commit = "^4.1.0"
conventional-pre-commit = "^4.0.0"

[tool.poetry.extras]
docs = ["sphinx"]

# ---------------------------------------------------------------------------- #
#                             ruff formatter/linter                            #
# ---------------------------------------------------------------------------- #


# ----------------------------- ruff global config ----------------------------- #

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length=120

[tool.ruff.lint]
preview = true
select = [
    "E", "W",   # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]
ignore = []
fixable = ["ALL"]           # Allow automatic fixes for all fixable issues

[tool.ruff.format]
preview = true
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[tool.ruff.lint.pydocstyle]
convention = "google"

# ---------------------------------------------------------------------------- #
#                                       mypy                                   #
# ---------------------------------------------------------------------------- #

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = false   # Display error for all missing imports
strict = true                    # Enable more checks
mypy_path = "src"

# ---------------------------------------------------------------------------- #
#                                    bandit                                    #
# ---------------------------------------------------------------------------- #
[tool.bandit]
exclude_dirs = ["./.venv", "./tests"]

# ---------------------------------------------------------------------------- #
#                                    pytest                                    #
# ---------------------------------------------------------------------------- #

[tool.pytest.ini_options]
addopts = """
--tb=long
--code-highlight=yes
--color=yes
-vv
"""
testpaths = ["tests"]
